# googletest-predicates

./: Cargo.toml  README.md
src/: lib.rs
