[package]
name = "googletest-predicates"
version = "0.3.0"
edition = "2021"
description = "Provides a function to convert googletest matchers (https://docs.rs/googletest/latest/googletest/) into predicates (https://docs.rs/predicates/latest/predicates)."
license = "MIT"

[dependencies]
googletest = '0.10'
predicates = '3.0'
